--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,6 +15,27 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+
+  <header>
+    <div class="nav-container">
+      <nav>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Portfolio</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
+    <div>
+  </header>
+
+
+
+  <section class="intro">
+    <img src="/images/intro-img.jpg" alt="">
+  </section>
+
+
+
 </body>
+
 </html>
