--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="less/index.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -31,7 +31,24 @@
 
 
   <section class="intro">
-    <img src="/images/intro-img.jpg" alt="">
+
+
+    <div class="intro-img">
+      <img src="/images/intro-img.jpeg" alt="">
+    </div>
+
+    <div class="title">
+      <h1>Christina Kaliora</h1>
+      <h3>Full Stack Web Developer</h3>
+    </div>
+
+    <div class="intro-p-btn">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dolorem nemo harum ducimus accusantium
+        inventore veniam nostrum molestias doloribus obcaecati, repudiandae eaque error voluptates porro perspiciatis
+        dolorum distinctio neque eveniet!</p>
+      <button>Lets Team Up</button>
+    </div>
+
   </section>
 
 
