--- a/index.html
+++ b/index.html
@@ -3,56 +3,70 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+<meta charset="utf-8">
 
-  <title>My Resume</title>
+<title>My Resume</title>
 
-  <link rel="stylesheet" href="less/index.css">
+<link rel="stylesheet" href="less/index.css">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+<!--[if lt IE 9]>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+<![endif]-->
 </head>
 
 <body>
-
-  <header>
-    <div class="nav-container">
-      <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Portfolio</a>
-        <a href="">Contact</a>
-      </nav>
-    </div>
-    <div>
-  </header>
-
-
-
-  <section class="intro">
-
-
-    <div class="intro-img">
-      <img src="/images/intro-img.jpeg" alt="">
-    </div>
-
-    <div class="title">
-      <h1>Christina Kaliora</h1>
-      <h3>Full Stack Web Developer</h3>
-    </div>
-
-    <div class="intro-p-btn">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dolorem nemo harum ducimus accusantium
-        inventore veniam nostrum molestias doloribus obcaecati, repudiandae eaque error voluptates porro perspiciatis
-        dolorum distinctio neque eveniet!</p>
-      <button>Lets Team Up</button>
-    </div>
-
-  </section>
+<div class="page-wrapper">
+<header>
+  <div class="nav-container">
+    <nav>
+      <a href="">Home</a>
+      <a href="">About</a>
+      <a href="https://christinakal.github.io/">Portfolio</a>
+      <a href="">Contact</a>
+    </nav>
+  </div>
+  <div>
+</header>
 
 
 
+<section class="intro">
+
+
+  <div class="intro-img">
+    <img src="/images/intro-img.jpeg" alt="">
+  </div>
+
+  <div class="title">
+    <h1>Christina Kaliora</h1>
+    <h3>Full Stack Web Developer</h3>
+  </div>
+
+  <div class="intro-p-btn">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dolorem nemo harum ducimus accusantium
+      inventore veniam nostrum molestias doloribus obcaecati, repudiandae eaque error voluptates porro perspiciatis
+      dolorum distinctio neque eveniet!</p>
+    <button>Lets Team Up</button>
+  </div>
+
+</section>
+
+
+<section class="middle-section">
+  <div class="info">
+    <h2>Listen Up...</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eum fugiat aperiam veritatis tempore officiis cumque inventore.</p>
+  </div>
+  <div class="stuff">
+    <h2>Stuff I'm Good At</h2>
+    <p>Sleeping</p>
+    <p>Hiking</p>
+    <p>Drawing</p>
+    <p>Coding ...</p>
+  </div>
+</section>
+
+</div>
 </body>
 
 </html>
