--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
   <div class="intro-img">
-    <img src="/images/intro-img.jpeg" alt="">
+    <img src="/images/intro-img.jpg" alt="">
   </div>
 
   <div class="title">
@@ -59,12 +59,41 @@
   </div>
   <div class="stuff">
     <h2>Stuff I'm Good At</h2>
-    <p>Sleeping</p>
+    <table style="width:100%">
+    <tr>
+      <th>Sleeping</th>
+    </tr>
+    <tr>
+      <td>Hiking</td>
+    </tr>
+    <tr>
+      <td>Drawing</td>
+    </tr>
+    <tr>
+      <td>Coding</td>
+    </tr>
+  </table> 
+    <!-- <p>Sleeping</p>
     <p>Hiking</p>
     <p>Drawing</p>
-    <p>Coding ...</p>
+    <p>Coding ...</p> -->
   </div>
 </section>
+
+
+
+
+<section class="work-history">
+
+
+</section>
+
+
+
+
+<footer>
+
+</footer>
 
 </div>
 </body>
