trying to fix issue with font size

--- a/index.html
+++ b/index.html
@@ -10,92 +10,102 @@
 <link rel="stylesheet" href="less/index.css">
 
 <!--[if lt IE 9]>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 <![endif]-->
 </head>
 
 <body>
-<div class="page-wrapper">
-<header>
-  <div class="nav-container">
-    <nav>
-      <a href="">Home</a>
-      <a href="">About</a>
-      <a href="https://christinakal.github.io/">Portfolio</a>
-      <a href="">Contact</a>
-    </nav>
-  </div>
-  <div>
-</header>
+
+  <header>
+    <div class="nav-container">
+      <nav>
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="https://christinakal.github.io/">Portfolio</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
+    <div>
+  </header>
 
 
 
-<section class="intro">
+  <section class="intro">
 
 
-  <div class="intro-img">
-    <img src="/images/intro-img.jpg" alt="">
-  </div>
+    <div class="intro-img">
+      <img src="/images/intro-img.jpg" alt="">
+    </div>
 
-  <div class="title">
-    <h1>Christina Kaliora</h1>
-    <h3>Full Stack Web Developer</h3>
-  </div>
+    <div class="title">
+      <h1>Christina Kaliora</h1>
+      <h3>Full Stack Web Developer</h3>
+    </div>
 
-  <div class="intro-p-btn">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dolorem nemo harum ducimus accusantium
-      inventore veniam nostrum molestias doloribus obcaecati, repudiandae eaque error voluptates porro perspiciatis
-      dolorum distinctio neque eveniet!</p>
-    <button>Lets Team Up</button>
-  </div>
+    <div class="intro-p-btn">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores dolorem nemo harum ducimus accusantium
+        inventore veniam nostrum molestias doloribus obcaecati, repudiandae eaque error voluptates porro perspiciatis
+        dolorum distinctio neque eveniet!</p>
+      <button>Lets Team Up</button>
+    </div>
 
-</section>
+  </section>
 
 
-<section class="middle-section">
-  <div class="info">
-    <h2>Listen Up...</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eum fugiat aperiam veritatis tempore officiis cumque inventore.</p>
-  </div>
+  <section class="middle-section">
+    <div class="info">
+      <h2>Listen Up...</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eum fugiat aperiam veritatis tempore officiis cumque inventore.</p>
+    </div>
   <div class="stuff">
     <h2>Stuff I'm Good At</h2>
     <table style="width:100%">
-    <tr>
-      <th>Sleeping</th>
-    </tr>
-    <tr>
-      <td>Hiking</td>
-    </tr>
-    <tr>
-      <td>Drawing</td>
-    </tr>
-    <tr>
-      <td>Coding</td>
-    </tr>
-  </table> 
-    <!-- <p>Sleeping</p>
-    <p>Hiking</p>
-    <p>Drawing</p>
-    <p>Coding ...</p> -->
+      <tr>
+        <th>Sleeping</th>
+      </tr>
+      <tr>
+        <td>Hiking</td>
+      </tr>
+      <tr>
+        <td>Drawing</td>
+      </tr>
+      <tr>
+        <td>Coding</td>
+      </tr>
+    </table> 
   </div>
-</section>
+  </section>
 
 
 
 
-<section class="work-history">
+  <section class="work-history">
+    <h1>Work History</h1>
+    <table style="width:100%">
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Age</th>
+      </tr>
+      <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+        <td>50</td>
+      </tr>
+      <tr>
+        <td>Eve</td>
+        <td>Jackson</td>
+        <td>94</td>
+      </tr>
+    </table>
+  </section>
 
 
-</section>
+  <footer>
+    <p>Copyright Awesomeness 2019</p>
+  </footer>
 
 
-
-
-<footer>
-
-</footer>
-
-</div>
 </body>
 
 </html>
