--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <title>My Resume</title>
 
 <link rel="stylesheet" href="css/index.css">
+<script src="https://kit.fontawesome.com/5b4b9ca1d0.js" crossorigin="anonymous"></script>
 
 <!--[if lt IE 9]>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -55,55 +56,76 @@
   </section>
 
 
+
+<!-- --- MIDDLE SECTION --- -->
+
+
   <section class="middle-section">
     <div class="info">
       <h2>Listen Up...</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam eum fugiat aperiam veritatis tempore officiis cumque inventore.</p>
     </div>
-  <div class="stuff">
-    <h2>Stuff I'm Good At</h2>
-    <table style="width:100%">
-      <tr>
-        <th>Sleeping</th>
-      </tr>
-      <tr>
-        <td>Hiking</td>
-      </tr>
-      <tr>
-        <td>Drawing</td>
-      </tr>
-      <tr>
-        <td>Coding</td>
-      </tr>
-    </table> 
-  </div>
+    <div class="stuff">
+      <h2>Stuff I'm Good At</h2>
+      <table style="width:100%">
+        <tr>
+          <th>Sleeping</th>
+        </tr>
+        <tr>
+          <td>Hiking</td>
+        </tr>
+        <tr>
+          <td>Drawing</td>
+        </tr>
+        <tr>
+          <td>Coding</td>
+        </tr>
+      </table> 
+    </div>
+  </section>
+
+
+  <!-- --- CONTACT --- -->
+
+  <section class="contact">
+    <div class="contact-h1-wrapper">
+      <h1>Contact</h1>
+    </div>
+    <div class="contact-info-wrapper">
+      <div class="email">
+        <a href="develop@pirron.one" type="email">Email</a>
+        <i class="far fa-envelope"></i>
+      </div>
+      <div class="twitter">
+        <a href="https://twitter.com">Twitter</a>
+        <i class="fab fa-twitter-square"></i>
+      </div>
+    </div>
   </section>
 
 
 
+
+<!-- --- WORK HISTORY --- -->
 
   <section class="work-history">
     <h1>Work History</h1>
     <table style="width:100%">
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Age</th>
+        <td>Random Startup</td>
+        <td>Front-End Engineer</td>
       </tr>
       <tr>
-        <td>Jill</td>
-        <td>Smith</td>
-        <td>50</td>
-      </tr>
-      <tr>
-        <td>Eve</td>
-        <td>Jackson</td>
-        <td>94</td>
+        <td>Hacker One</td>
+        <td>Bug Bounty Hunter</td>
       </tr>
     </table>
   </section>
 
 
+
+
+  <!-- --- FOOTER --- -->
   <footer>
     <p>Copyright Awesomeness 2019</p>
   </footer>
